--- a/Project2 - Landmark Classification/landmark.ipynb
+++ b/Project2 - Landmark Classification/landmark.ipynb
@@ -1166,8 +1166,8 @@
    "source": [
     "__Answer:__ (Three possible points for improvement)\n",
     "- The output is better than I expected.\n",
-    "- First improvement: Get more data for training and validation\n",
-    "- Apply (custom) transforms (RandomCrop, RandomRotation etc.)\n",
+    "- Get more data for training and validation.\n",
+    "- Apply (custom) transforms (RandomCrop, RandomRotation etc.).\n",
     "- Tune hyperparameters (dropout probability, learning rate, optimizer etc.). Grid search could be performed."
    ]
   },
